TFG/force-app/main/default/objects/Case/fields/BookingId__c.field-meta.xml
<CustomField>
    <fullName>BookingId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Request</relationshipLabel>
    <relationshipName>Request</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>