TFG/force-app/main/default/objects/Case/fields/TranslatedDescription__c.field-meta.xml
<CustomField>
    <fullName>TranslatedDescription__c</fullName>
    <description>Translated description of the Case</description>
    <label>Translated Description</label>
    <length>90000</length>
    <type>LongTextArea</type>
</CustomField>